--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "bin": {
+    "sniff-it": "./index.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
