--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "sniff-it": "./index.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "multer": "^1.4.2",
     "ngrok": "^3.2.4"
   }
 }
