--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sniff-it",
+  "name": "sniffit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js"
   },
   "bin": {
-    "sniff-it": "./index.js"
+    "sniffit": "./index.js"
   },
   "author": "",
   "license": "MIT",
